--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -121,6 +121,7 @@ footer {column-gap: 1rem;order: 6;}
 .flex {display:flex;}
 .flex-1 {flex: 1;}
 .flex-1-0-100 {flex: 1 0 100%;}
+.flex-1-0-50 {flex: 1 0 50%;}
 .justify-between{justify-content: space-between;}
 .wrap {flex-wrap: wrap;}
 .flex-column{flex-direction: column;}
@@ -390,7 +391,7 @@ body .modal_window.toast,
 h1,h2,h3,h4,h5,h6,
 .h1,.h2,.h3,.h4,.h5,.h6 {
 	margin:0;
-	/* width: 100%; */
+	width: 100%;
 	font-family: 'Roboto Condensed', sans-serif;
 	padding: 0 0 .5rem 0;
 }
@@ -625,7 +626,12 @@ fieldset {
 	margin: 0 10px 10px;
 	border: 2px solid transparent;
 	transition: all var(--animation-duration);
+	display: grid;
+    grid-template-columns: 5em auto;
+    gap: 0.5em;
+	align-items: center;
 }
+
 /* .form-group.required input[type=""]::before {
 	content: '*';
 	color: var(--danger);
@@ -1567,6 +1573,16 @@ input#input-quantity {
 
 /* Pretty radio and checkboxes */
 /* Todo Clean styles of radio and checkboxes */
+input[type="checkbox"], input[type="radio"] {
+	/* Add if not using autoprefixer */
+	-webkit-appearance: none;
+	appearance: none;
+	/* For iOS < 15 to remove gradient background */
+	background-color: #fff;
+	/* Not removed via appearance */
+	margin: 0;
+}
+
 @supports (transform: rotate(1turn)) and (opacity: 0) {
 
     input[type="checkbox"], input[type="radio"] {
