--- a/catalog/view/theme/helium/template/checkout/login.twig
+++ b/catalog/view/theme/helium/template/checkout/login.twig
@@ -1,5 +1,5 @@
-<div class="row">
-  <div class="col-sm-6">
+<div class="flex flex-1-0-100 flex-row wrap">
+  <div class="flex flex-column">
     <h2>{{ text_new_customer }}</h2>
     <p>{{ text_checkout }}</p>
     <div class="radio">
@@ -25,17 +25,18 @@
     <p>{{ text_register_account }}</p>
     <button type="button" id="button-account" class="btn btn-primary">{{ button_continue }}</button>
   </div>
-  <div class="col-sm-6">
+  <div class="flex flex-column">
     <h2>{{ text_returning_customer }}</h2>
     <p>{{ text_i_am_returning_customer }}</p>
     <div class="form-group">
-      <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
       <label class="control-label" for="input-email">{{ entry_email }}</label>
+      <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
     </div>
     <div class="form-group">
-      <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
       <label class="control-label" for="input-password">{{ entry_password }}</label>
-      <a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
-    <button type="button" id="button-login" class="btn btn-primary">{{ button_login }}</button>
+      <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
+    </div>
+      <button type="button" id="button-login" class="button primary">{{ button_login }}</button>
+      <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
   </div>
 </div>
