--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -569,7 +569,8 @@ textarea:not([rows]) {
 select {
 	background: var(--background-inputs) url("data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' height='63' width='117' fill='%23161f27'><path d='M115 2c-1-2-4-2-5 0L59 53 7 2a4 4 0 00-5 5l54 54 2 2 3-2 54-54c2-1 2-4 0-5z'/></svg>") calc(100% - 12px) 50%/12px no-repeat;
 	/* background:var(--background-blocks) var(--select-arrow) calc(100% - 12px) 50%/12px no-repeat; */
-	padding-right:35px
+	padding-right:35px;
+	box-shadow: inset 0 0 0 2px var(--button-base);
 }
 select::-ms-expand {
 	display:none
