--- a/catalog/view/theme/helium/template/checkout/shipping_method.twig
+++ b/catalog/view/theme/helium/template/checkout/shipping_method.twig
@@ -7,7 +7,7 @@
     <p><strong>{{ shipping_method.title }}</strong></p>
     {% if not shipping_method.error %}
       {% for quote in shipping_method.quote %}
-      <div class="radio">
+      <div class="form-control">
         {% if quote.code == code or not code %}
           {% set code = quote.code %}
           <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" checked="checked" />
@@ -15,7 +15,6 @@
           <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" />
         {% endif %}
         <label for="{{ quote.code }}">{{ quote.title }} - {{ quote.text }}</label>
-        
       </div>
       {% endfor %}
     {% else %}
