--- a/catalog/view/theme/helium/template/checkout/shipping_method.twig
+++ b/catalog/view/theme/helium/template/checkout/shipping_method.twig
@@ -2,32 +2,34 @@
   <div class="alert alert-warning alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
 {% endif %}
 {% if shipping_methods %}
-  <p>{{ text_shipping_method }}</p>
-  {% for shipping_method in shipping_methods %}
-    <p><strong>{{ shipping_method.title }}</strong></p>
-    {% if not shipping_method.error %}
-      {% for quote in shipping_method.quote %}
-      <div class="form-control">
-        {% if quote.code == code or not code %}
-          {% set code = quote.code %}
-          <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" checked="checked" />
+  <form action="index.php?route=checkout/shipping_method/save" method="post" id="shipping_method">
+    <fieldset>
+      <legend>{{ text_shipping_method }}</legend>
+      {% for shipping_method in shipping_methods %}
+        <p><strong>{{ shipping_method.title }}</strong></p>
+        {% if not shipping_method.error %}
+          {% for quote in shipping_method.quote %}
+          <div class="form-control">
+            {% if quote.code == code or not code %}
+              {% set code = quote.code %}
+                <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" checked="checked" />
+              {% else %}
+                <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" />
+              {% endif %}
+            <label for="{{ quote.code }}">{{ quote.title }} - {{ quote.text }}</label>
+          </div>
+          {% endfor %}
         {% else %}
-          <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" />
+          <div class="alert alert-danger alert-dismissible">{{ shipping_method.error }}</div>
         {% endif %}
-        <label for="{{ quote.code }}">{{ quote.title }} - {{ quote.text }}</label>
-      </div>
       {% endfor %}
-    {% else %}
-      <div class="alert alert-danger alert-dismissible">{{ shipping_method.error }}</div>
-    {% endif %}
-  {% endfor %}
+    </fieldset>
+    <p><strong>{{ text_comments }}</strong></p>
+    <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
+    <div class="buttons">
+      <div class="pull-right">
+        <button type="submit" value="" id="button-shipping-method" class="primary">{{ button_continue }}</button>
+      </div>
+    </div>
+  </form>
 {% endif %}
-<p><strong>{{ text_comments }}</strong></p>
-<p>
-  <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
-</p>
-<div class="buttons">
-  <div class="pull-right">
-    <input type="button" value="{{ button_continue }}" id="button-shipping-method" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
-  </div>
-</div>
