--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -670,6 +670,9 @@ fieldset {
 	color: var(--danger);
 	font-weight: 600;
 }
+.form-group .text-danger {
+	grid-column: span 2;
+}
 legend {
 	font-weight:600;
 	text-transform: uppercase;
