--- a/catalog/view/theme/helium/template/account/address_list.twig
+++ b/catalog/view/theme/helium/template/account/address_list.twig
@@ -1,49 +1,41 @@
 {{ header }}
-<div id="account-address" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="account-address" class="container">
   {% if success %}
-  <div class="alert alert-success alert-dismissible"><i class="icon-info"></i> {{ success }}</div>
+    <div class="alert alert-success alert-dismissible"><i class="icon-info"></i> {{ success }}</div>
   {% endif %}
   {% if error_warning %}
-  <div class="alert alert-warning"><i class="icon-alert"></i> {{ error_warning }}</div>
+    <div class="alert alert-warning"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
-      <h2>{{ text_address_book }}</h2>
-      {% if addresses %}
-      <div class="table-responsive">
-        <table class="table table-bordered table-hover">
-          {% for result in addresses %}
-           <form  action="{{ result.delete }}" method="post" enctype="multipart/form-data" id="form-address-{{ result.address_id }}">
-          <tr>
-            <td class="text-left">{{ result.address }}</td>
-            <td class="text-right"><a href="{{ result.update }}">{{ button_edit }}</a> &nbsp; 
-            <a href = "{{ result.delete }}" data-toggle="tooltip" title="{{ button_delete }}" class="danger" onclick="return confirm('{{ text_confirm }}')">{{ button_delete }}</a></td>
-          </tr>
-          </form>
-          {% endfor %}
-        </table>
-      </div>
-      {% else %}
-      <p>{{ text_empty }}</p>
-      {% endif %}
-      
-      <div class="buttons clearfix">
-        <div class="pull-left"><a href="{{ back }}" class="default">{{ button_back }}</a></div>
-        <div class="pull-right"><a href="{{ add }}" class="primary">{{ button_new_address }}</a></div>
-      </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+
+  <h2>{{ text_address_book }}</h2>
+  {{ content_top }}
+
+  {% if addresses %}
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover">
+        {% for result in addresses %}
+          <form  action="{{ result.delete }}" method="post" enctype="multipart/form-data" id="form-address-{{ result.address_id }}">
+        <tr>
+          <td class="text-left">{{ result.address }}</td>
+          <td class="text-right"><a href="{{ result.update }}">{{ button_edit }}</a> &nbsp; 
+          <a href = "{{ result.delete }}" data-toggle="tooltip" title="{{ button_delete }}" class="danger" onclick="return confirm('{{ text_confirm }}')">{{ button_delete }}</a></td>
+        </tr>
+        </form>
+        {% endfor %}
+      </table>
+    </div>
+  {% else %}
+    <p>{{ text_empty }}</p>
+  {% endif %}
+
+  {{ content_bottom }}
+
+  <div class="buttons clearfix">
+    <div class="pull-left"><a href="{{ back }}" class="default">{{ button_back }}</a></div>
+    <div class="pull-right"><a href="{{ add }}" class="primary">{{ button_new_address }}</a></div>
+  </div>
+</main>
+{{ column_left }}
+{{ column_right }}
 {{ footer }}
